Fixed width to align with posts

--- a/client/src/styles/BlogPagination.module.scss
+++ b/client/src/styles/BlogPagination.module.scss
@@ -1,6 +1,6 @@
 .BlogPaginationContainer {
   margin: 10px 0;
-  width: 100%;
+  width: 550px;
 }
 
 .pageLinksContainer {
@@ -15,5 +15,5 @@
 }
 
 .pageNumber {
-text-align: right;
+  text-align: right;
 }
